--- a/newstyle.css
+++ b/newstyle.css
@@ -25,13 +25,12 @@ width: 100%;
  	width: 75%;
  	float: right;
  }
- .rightmenu ul li{
+ .rightmenu ul li {
  	font-size: 36px;
  	padding: 20px;
  	color: white;
  	float: left;
  	list-style: none;
- 	text-decoration: none;
 
  }
  .text{
@@ -70,3 +69,11 @@ width: 100%;
   .button{
   	margin: 50px 0px;
   }
+.rightmenu ul li a:hover{ color: red;
+	text-decoration: none;
+
+}
+.rightmenu ul li a{
+	text-decoration: none;
+	color: white;
+}
